switched talos with careai

--- a/content/docs/documentation/index.mdx
+++ b/content/docs/documentation/index.mdx
@@ -3,7 +3,7 @@ title: Documentation
 description: Build your documentation site using Contentlayer and MDX.
 ---
 
-talos  includes a documentation site built using [Contentlayer](https://contentlayer.dev) and [MDX](http://mdxjs.com).
+Care  includes a documentation site built using [Contentlayer](https://contentlayer.dev) and [MDX](http://mdxjs.com).
 
 ## Features
 
