--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,9 +1,9 @@
 ---
 title: Documentation
-description: Welcome to the talos  documentation.
+description: Welcome to the Care  documentation.
 ---
 
-This is the documentation for the talos  site.
+This is the documentation for the Care  site.
 
 This is an example of a doc site built using [ContentLayer](/docs/documentation/contentlayer) and MDX.
 
